--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,9 +1,12 @@
-<h1>Cocktails#new</h1>
 <!-- <p>Find me in app/views/cocktails/new.html.erb</p> -->
-
+<div class="m-4">
+<div class="container">
+<h1>What cocktail do you want to create?</h1>
 <%= simple_form_for [@cocktail] do |f| %>
   <%= f.input :name %>
   <%= f.association :ingredients %>
-  <%= f.submit "Create a cocktail", class: "btn btn-primary"%>
+  <%= f.submit "Create and shake", class: "btn btn-outline-warning"%>
 <% end %>
+</div>
+</div>
 
