--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,11 +1,23 @@
-<h1>Cocktails</h1>
-<!-- <p>Find me in app/views/cocktails/index.html.erb</p> -->
-<% @cocktails.each do |cocktail| %>
-<p><%= link_to cocktail_path(cocktail) do %><%= cocktail.name %>
-  <% end %>
-</p>
-<% end %>
 
-<%= link_to 'Create a cocktail', new_cocktail_path, class: 'btn btn-danger' %>
+
+<!-- <p>Find me in app/views/cocktails/index.html.erb</p> -->
+<div class="grid-cards m-5">
+  <div class="container">
+    <div class="row">
+      <% @cocktails.each do |cocktail| %>
+        <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+            <div class="m-2">
+                <%= link_to cocktail_path(cocktail) do %>
+              <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1566284628402-3f0895b3eb28?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=944&q=80)">
+                  # <%= cocktail.name %>
+              </div>
+                <% end %>
+            </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
+
 
 
