--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -4,12 +4,14 @@
 
 <% @cocktail.doses.each do |dose| %>
   <ul>
-    <li><%= dose.ingredient["name"] %>: <%= dose.description %> </li>
-    <p><%= link_to 'Delete', dose_path(dose), method: :delete %></p>
+    <li><%= dose.ingredient["name"] %>: <%= dose.description %>
+    <%= link_to dose_path(dose), method: :delete do %> | <i class="fas fa-trash-alt"></i><% end %></li>
   </ul>
 <% end %>
 
-<%= link_to 'Add a dose', new_cocktail_dose_path(@cocktail) %>
+
+<%= link_to new_cocktail_dose_path(@cocktail) do %><%= 'Add a dose' %> <i class="fas fa-plus-square"></i><% end %>
+<p><%= link_to 'Done', cocktails_path, class: 'mt-3' %></p>
 </div>
 
 
