--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,16 +6,34 @@
     <%= csp_meta_tag %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
+    <nav>
+        <div class="menu-icon">
+          <i class="fa fa-bars fa-2x"></i>
+        </div>
+        <div class="logo">
+          <%= link_to 'Shake', cocktails_path %> <i class="fas fa-shekel-sign"></i>
+        </div>
+          <div class="menu">
+            <ul>
+              <li><%= link_to 'Create', new_cocktail_path %></li>
+              <li><%= link_to 'Explore', cocktails_path %></li>
+            </ul>
+          </div>
+        </nav>
+      <div class="home-banner">
+        <div class="bg-black">
+        <h1>Forget the reviews. Create your taste.</h1>
+        </div>
+      </div>
+      <%= yield %>
     <%#= javascript_include_tag "application" %> <!-- from app/assets/javascripts/application.js -->
-    <%= javascript_pack_tag "application" %>    <!-- from app/javascript/packs/application.js -->
-
-    <p><%= link_to 'Home', cocktails_path %></p>
+      <%= javascript_pack_tag "application" %>    <!-- from app/javascript/packs/application.js -->
   </body>
 </html>
