--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -10,6 +10,9 @@
                 <%= link_to cocktail_path(cocktail) do %>
               <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1566284628402-3f0895b3eb28?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=944&q=80)">
                   # <%= cocktail.name %>
+                  <%= cl_image_tag("wydkfirqblfdtvpsiv2i",
+      width: 400, height: 300, crop: :fill) %>
+
               </div>
                 <% end %>
             </div>
