Image uploader is working properly now. Fixed the html syntaxes on index.html.erb

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -8,12 +8,14 @@
         <div class="col-12 col-sm-12 col-md-6 col-lg-6">
             <div class="m-2">
                 <%= link_to cocktail_path(cocktail) do %>
-                  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1566284628402-3f0895b3eb28?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=944&q=80)">
-                    # <%= cocktail.name %>
-                  </div>
+                  <% unless cocktail.photo.file.nil? %>
+                    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path cocktail.photo, height: 300, width: 400, crop: :fill %>')">
+                  <% else %>
+                    <div class="card-category">
+                  <% end %>
+                      <%= cocktail.name %>
+                    </div>
                 <% end %>
-                <%= cl_image_tag("wydkfirqblfdtvpsiv2i",
-      width: 400, height: 300, crop: :fill) %>
             </div>
         </div>
       <% end %>
@@ -22,4 +24,12 @@
 </div>
 
 
+
+
+
+
+<!--
+<div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1566284628402-3f0895b3eb28?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=944&q=80)">
+
+</div> -->
 
