--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -2,6 +2,8 @@
 <div class="container mt-4">
 <h1><%= @cocktail.name %></h1>
 
+<%= cl_image_tag @cocktail.photo, height: 300, width: 400, crop: :fill %>
+
 <% @cocktail.doses.each do |dose| %>
   <ul>
     <li><%= dose.ingredient["name"] %>: <%= dose.description %>
